flex/flex-tests/testData/flex_highlighting/DuplicatedIdsInMxml.mxml
<?xml version="1.0" encoding="utf-8"?>

<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml">
    <mx:Button id="a111"/>
    <mx:Button id="a111"/>
    <mx:Button id=<error descr="invalid identifier value">"111"</error>/>
    <mx:Button id="b11"/>
    <mx:Button id="ccc" mx:id="1 2 3"/>
    <mx:Button id="ddd">
        <mx:id>{1 + 2}</mx:id>
    </mx:Button>
</mx:Application>